Add Maven application installation and native command management
Assisted-by: codex:gpt-6-astra